--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,11 +4,11 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* TODO: I'm not sure if I should actually put it in * selector or another one for performance reasons */
-  list-style-type: none;
-  /* for transition when changing the theme. */
-  /* TODO see if you can make it so only background color and color get changed*/
   transition: background-color 200ms ease-in;
+}
+
+li {
+  list-style-type: none;
 }
 
 a {
